frontend/estatico/componentes.css
@import "tailwindcss";

.btn,
.dropdown-item,
.dropdown-check {
  @apply flex items-center gap-2 p-1.5 px-2 rounded transition-colors disabled:opacity-50 disabled:cursor-not-allowed;
}

.btn {
  @apply justify-center font-bold
}

label.btn {
  @apply peer-disabled/input:cursor-not-allowed peer-disabled/input:opacity-50 cursor-pointer
}

.input, .btn-secundario {
  @apply border-base not-disabled:hover:bg-dark not-disabled:focus-visible:bg-dark not-disabled:hover:border-highlight not-disabled:focus-visible:border-highlight
}

.input {
  @apply w-full p-0.5 px-2 rounded border bg-darkest aria-[invalid=true]:border-red-500 aria-[invalid=true]:outline-red-500 aria-[invalid=true]:text-red-500 disabled:cursor-not-allowed disabled:text-neutral-400 transition-colors
}

.btn-primario, a[aria-current=page], .primario {
  @apply bg-primary text-[var(--bg-base)]
}

.btn-primario, a[aria-current=page] {
  @apply not-disabled:hover:bg-neutral-800 not-disabled:hover:dark:bg-neutral-300 outline-offset-2
}

.btn-borde {
  @apply border-2 border-primary not-disabled:hover:bg-dark not-disabled:focus:bg-dark -outline-offset-2
}

.btn-secundario {
  @apply border bg-darkest text-neutral-500 dark:text-neutral-300
}

.btn-peligro {
  @apply bg-red-500 not-disabled:hover:bg-red-600 text-white
}

.dropdown-content {
  @apply col gap-2 p-2 rounded-box shadow-lg bg-base border border-base will-change-[opacity,transform] data-[side=bottom]:animate-[slideUpAndFade_150ms] data-[side=left]:animate-[slideRightAndFade_150ms] data-[side=right]:animate-[slideLeftAndFade_150ms] data-[side=top]:animate-[slideDownAndFade_150ms]
}

.dropdown-item,
.dropdown-check {
  @apply w-full hover:outline-0! border border-transparent! data-highlighted:not-disabled:not-[[data-state=checked]]:bg-dark data-highlighted:border-highlight! cursor-default
}

.dropdown-check-btn {
  @apply flex justify-center p-1 hover:outline-0! border border-transparent text-muted aria-[checked=false]:border-base rounded-selector cursor-pointer aria-[checked=false]:bg-dark aria-[checked=true]:bg-primary aria-[checked=true]:text-[var(--bg-base)] transition-colors
}

.dropdown-check {
  @apply data-[state="checked"]:bg-primary data-[state="checked"]:text-[var(--bg-base)] cursor-default
}

.carga {
  --speed: .8s;
  --bg-opacity: 0.1;
  transform-origin: center;
  animation: rotate var(--speed) linear infinite;
  will-change: transform;
  overflow: visible;
}

.carga .car {
  fill: none;
  stroke-dasharray: 25, 75;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  transition: stroke 0.5s ease;
}

.carga .track {
  fill: none;
  opacity: var(--bg-opacity);
  transition: stroke 0.5s ease;
}

@keyframes slideUpAndFade {
  from {
    opacity: 0;
    transform: translateY(2px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideRightAndFade {
  from {
    opacity: 0;
    transform: translateX(-2px);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideDownAndFade {
  from {
    opacity: 0;
    transform: translateY(-2px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideLeftAndFade {
  from {
    opacity: 0;
    transform: translateX(2px);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

